<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/todayFragment">

    <fragment
        android:id="@+id/todayFragment"
        android:name="com.example.identify.ui.TodayFragment"
        android:label="@string/title_today">
        <action
            android:id="@+id/action_today_to_camera"
            app:destination="@id/cameraFragment" />
    </fragment>

    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.example.identify.ui.CameraFragment"
        android:label="@string/title_camera">
        <action
            android:id="@+id/action_camera_to_result"
            app:destination="@id/resultFragment" />
    </fragment>

    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.identify.ui.ResultFragment"
        android:label="@string/title_result">
        <argument
            android:name="imagePath"
            app:argType="string" />
        <action
            android:id="@+id/action_result_to_today"
            app:destination="@id/todayFragment"
            app:popUpTo="@id/todayFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/diaryFragment"
        android:name="com.example.identify.ui.DiaryFragment"
        android:label="@string/title_diary" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.identify.ui.HistoryFragment"
        android:label="@string/title_history" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.identify.ui.SettingsFragment"
        android:label="@string/title_settings" />
</navigation>
